@@ -2,6 +2,7 @@
 ------
 1. Add option to control whether bottom tabs should have their gradient
    shades inverted.
+2. Config files now stored under $XDG_CONFIG_HOME/qtcurve (e.g. ~/.config/qtcurve)
 2. Add an experimental option to hide/unhide menubars using Ctrl-Alt-M.
 3. Update versions XBar menu files - taken from Bespin r641
 4. Disable XBar support for KDevelop - as per Bespin.
